update train file

--- a/Facial Age Estimation Model/Facial_Age_Estimation_Model.ipynb
+++ b/Facial Age Estimation Model/Facial_Age_Estimation_Model.ipynb
@@ -144,7 +144,7 @@
     "test_datagen = ImageDataGenerator(rescale=1./255)\n",
     "\n",
     "# Data Generators\n",
-    "training_set = train_datagen.flow_from_directory(train_path,\n",
+    "training_set = train_datagen.flow_from_directory(train_path, \n",
     "                                                 target_size = IMAGE_SIZE,\n",
     "                                                 batch_size = batch_size,\n",
     "                                                 class_mode = 'categorical')\n",
@@ -228,7 +228,7 @@
     "\n",
     "# Flatten and Fully Connected Layers with Dropout\n",
     "x = Flatten()(x)\n",
-    "x = Dense(128, activation='relu', kernel_regularizer=l2(0.01))(x)  # use this , try ti change the precnage may be better?\n",
+    "x = Dense(128, activation='relu', kernel_regularizer=l2(0.01))(x)  \n",
     "x = BatchNormalization()(x)\n",
     "x = Dropout(0.7)(x)\n",
     "\n",
@@ -240,7 +240,6 @@
     "\n",
     "# Compiling the Model\n",
     "model.compile(optimizer=Adam(lr=0.0001), loss='categorical_crossentropy', metrics=['accuracy'])\n",
-    "#model.compile(optimizer=Adam(lr=0.0001), loss='categorical_crossentropy', metrics=['accuracy']) # i think this one \n",
     "\n",
     "# Print the model summary\n",
     "model.summary()\n",
@@ -473,6 +472,7 @@
     "test_loss, test_acc = model.evaluate(test_set, steps=len(test_set))\n",
     "print(f'Test Loss: {test_loss}')\n",
     "print(f'Test Accuracy: {test_acc}')\n",
+    "\n",
     "# Model Evaluation and Confusion Matrix\n",
     "# Initialize variables to store true and predicted labels\n",
     "true_labels = []\n",
