--- a/Facial Age Group Estimation Model/Model_test.ipynb
+++ b/Facial Age Group Estimation Model/Model_test.ipynb
@@ -1,32 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing model performance on the test set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-28 00:03:02.995644: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 318ms/step\n",
+      "1/1 [==============================] - 0s 365ms/step\n",
+      "1/1 [==============================] - 0s 43ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
       "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 34ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
       "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
       "Image 1: Faces_images/test/0-3/153.jpg - Predicted Class Label: 0-3\n",
       "Image 2: Faces_images/test/0-3/423.jpg - Predicted Class Label: 0-3\n",
       "Image 3: Faces_images/test/4+/02614_cropped_cropped.jpg - Predicted Class Label: 4+\n",
@@ -35,7 +34,7 @@
       "Image 6: Faces_images/test/9+/35651_cropped_cropped.jpg - Predicted Class Label: 9+\n",
       "Image 7: Faces_images/test/12+/05321_cropped_cropped.jpg - Predicted Class Label: 12+\n",
       "Image 8: Faces_images/test/12+/15515_cropped_cropped.jpg - Predicted Class Label: 12+\n",
-      "Image 9: Faces_images/test/17+/05494_cropped.jpg - Predicted Class Label: 17+\n",
+      "Image 9: Faces_images/test/17+/07063_cropped.jpg - Predicted Class Label: 17+\n",
       "Image 10: Faces_images/test/17+/11032_cropped.jpg - Predicted Class Label: 17+\n"
      ]
     }
@@ -58,7 +57,7 @@
     "    return img_array\n",
     "\n",
     "# Load the saved model\n",
-    "model = tf.keras.models.load_model('FacialAgeGroupEstimation_BestModel.h5')\n",
+    "model = tf.keras.models.load_model('Facial_Age_Estimation_Model_E2.h5')\n",
     "\n",
     "# Define a list of image file paths from test set\n",
     "image_paths = [\n",
@@ -74,7 +73,7 @@
     "    'Faces_images/test/12+/05321_cropped_cropped.jpg',  #12+    \n",
     "    'Faces_images/test/12+/15515_cropped_cropped.jpg',  #12+  \n",
     "\n",
-    "    'Faces_images/test/17+/05494_cropped.jpg',  #17+    \n",
+    "    'Faces_images/test/17+/07063_cropped.jpg',  #17+    \n",
     "    'Faces_images/test/17+/11032_cropped.jpg',  #17+    \n",
     "]\n",
     "\n",
